Add track processing in manual workout loading
